--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ body{
   font-family: 'Inter', sans-serif;
   background-color: #FAF8F6;
 }
+
 ul {
   padding-inline-start: 0;
 }
@@ -181,6 +182,11 @@ input{
 }
 
 /*NAV*/
+
+.navbar-here{
+  padding-top:20px;
+  padding-bottom:20px;
+}
 .nav-link{
   padding:0px;
 }
@@ -188,7 +194,7 @@ nav a{
   font-size:16px;
 }
 nav li{
-  padding:25px 30px 25px 30px;
+  padding:10px 30px;
 }
 nav li:nth-child(5){
   padding-right: 0px;
@@ -201,10 +207,10 @@ nav li:nth-child(1){
   display: none;
   position: absolute;
   background-color: #FAF8F6;
-  width: 1110px;
+  width: 1150px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  transform: translate(-32%);
+  transform: translate(-32.5%);
 }
 .dropdown-content a {
   float: none;
@@ -411,5 +417,26 @@ nav li:nth-child(1){
   bottom:0px;
   left:0px;
 }
+
+/*test-nav-scoll*/
+body{
+  --nav-height:164px;
+  padding-top: var(--nav-height);
+}
+.headnav{
+  background: #FAF8F6;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width:100%;
+  z-index: 10000;
+  height: var(--nav-height);
+}
+.nav--hidden{
+  transform: translateY(-164px);
+}
+
+
+
 
 
