--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -96,8 +96,7 @@
     </div>
 
     <!--category-main-->
-    <div class="category-main col-10">
-
+    <div class="category-main px-0 col-10">
       <div class="row cate-product">
         <div class="col-3 card mb-9" *ngFor="let item of data | slice: 0: 4">
           <div class="item-card-info">
@@ -239,3 +238,4 @@
     </div>
   </div>
 </div>
+
