--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -20,6 +20,9 @@
             <img src="./assets/img/category-deco/{{cid}}.1.png" />
           </a>
         </div>
+        <div class="sub-name">
+          <h6>Eternity</h6>
+        </div>
       </div>
     </div>
     <div class="col-3">
@@ -29,6 +32,9 @@
             <img src="./assets/img/category-deco/{{cid}}.2.png" />
           </a>
         </div>
+        <div class="sub-name">
+          <h6>Cocktail</h6>
+        </div>
       </div>
     </div>
     <div class="col-3">
@@ -37,6 +43,9 @@
           <a routerLink="#">
             <img src="./assets/img/category-deco/{{cid}}.3.png" />
           </a>
+        </div>
+        <div class="sub-name">
+          <h6>Wedding</h6>
         </div>
       </div>
     </div>
