--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -241,10 +241,11 @@
         <p class="smt mb-2">Showing 60 of 180</p>
         <button class="btn-more">View more</button>
         <div class="d-flex mt-3">
-          <a class="mx-auto back-to-top smt">Back to top <i class="ps-3 fa-solid fa-chevron-up"></i></a>
+          <a class="mx-auto back-to-top smt" onclick="topFunction()" id="myBtn" title="Go to top">Back to top <i class="ps-3 fa-solid fa-chevron-up"></i></a>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 
