--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -102,9 +102,18 @@
         </div>
       </div>
       <div class="col-4">
-          <a href="#">
-            <img src="./assets/img/shop-all/ring-all3.png">
-          </a>
+        <div class="item-box-all">
+          <div class="item-box-img">
+            <a href="#">
+              <img src="./assets/img/shop-all/ring-all3.png">
+            </a>
+          </div>
+          <div class="item-box-content text-center">
+            <a routerLink="#">
+              <h5>Flawless Ring</h5>
+            </a>
+          </div>
+        </div>
       </div>
       <div class="col-2">
         <div class="card-prd mbt">
@@ -176,9 +185,18 @@
     <h4 class="text-center">Earrings</h4>
     <div class="row">
       <div class="col-4">
-        <a href="#">
-          <img src="./assets/img/shop-all/earr-all1.png">
-        </a>
+        <div class="item-box-all">
+          <div class="item-box-img">
+            <a href="#">
+              <img src="./assets/img/shop-all/earr-all1.png">
+            </a>
+          </div>
+          <div class="item-box-content text-center">
+            <a routerLink="#">
+              <h5>Sunflower Earring</h5>
+            </a>
+          </div>
+        </div>
       </div>
       <div class="col-2">
         <div class="card-prd mbt">
@@ -316,9 +334,18 @@
         </div>
       </div>
       <div class="col-4">
-        <a href="#">
-          <img src="./assets/img/shop-all/brac-all5.png">
-        </a>
+        <div class="item-box-all">
+          <div class="item-box-img">
+            <a href="#">
+              <img src="./assets/img/shop-all/brac-all5.png">
+            </a>
+          </div>
+          <div class="item-box-content text-center">
+            <a routerLink="#">
+              <h5>Bracelets</h5>
+            </a>
+          </div>
+        </div>
       </div>
       <div class="col-2">
         <div class="card-prd mbt">
@@ -390,9 +417,18 @@
           </div>
         </div>
         <div class="col-4">
-          <a href="#">
-            <img src="./assets/img/shop-all/neck-all3.png">
-          </a>
+          <div class="item-box-all">
+            <div class="item-box-img">
+              <a href="#">
+                <img src="./assets/img/shop-all/neck-all3.png">
+              </a>
+            </div>
+            <div class="item-box-content text-center">
+              <a routerLink="#">
+                <h5>Diamond Tear</h5>
+              </a>
+            </div>
+          </div>
         </div>
         <div class="col-2">
           <div class="card-prd mbt">
