--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -163,14 +163,14 @@
       <form>
           <label for="emailuser">Email address</label>
           <input id="emailuser" class="inpu mb-3" type="email" required><br>
-          <label>Create password</label>
+          <label>Password</label>
           <input class="inpu" type="text" required>
       </form>
       <button type="submit" class="btn btn-pri my-4" data-bs-dismiss="modal">Sign in</button>
       <div class="d-flex sign-in-content">
         <div class="signin-inner">
           <a class="forgot-pass smt me-5" data-bs-toggle="modal" type="submit" data-bs-target="#forgotpass">Forgot password?</a>
-          <span class="smt">New member?<a class="sign-up smt" data-bs-toggle="modal" type="button" data-bs-target="#signup">Sign up</a></span>
+          <span class="smt">New member? <a class="sign-up smt" data-bs-toggle="modal" type="button" data-bs-target="#signup">Sign up</a></span>
         </div>
       </div>
     </div>
