--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -42,21 +42,44 @@
       <div class="col"></div>
     </div>
   </div>
-  <div class="aguri-info">
-    <div class="row">
-      <div class="col-5 infor px-0">
-        <div class="showroom mb-4">
-          <p class="mdt">Showroom</p>
-          <p class="smt mb-2">6901 Hollywood Blvd, Los Angeles, CA 90028, United States</p>
-          <p class="smt">10 Northumberland St, London WC2N 5DB, United Kingdom</p>
-        </div>
-        <div class="mail-inf">
-          <p class="mdt">Email info</p>
-          <p class="smt">@AGURI&PIJ2022.com for appointment</p>
+
+  <div class="aguri-info ">
+      <div class="showroom mb-4">
+        <p class="mdt">Showroom</p>
+        <div id="carouselMaps" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselMaps" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselMaps" data-slide-to="1"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <p class="text-center">
+                <i class="fas fa-map-marker-alt"></i> 6901 Hollywood Blvd, Los Angeles, CA 90028, United States
+              </p>
+              <agm-map [latitude]=34.102345 [longitude]=-118.340389></agm-map>
+            </div>
+            <div class="carousel-item">
+              <p class="text-center">
+                <i class="fas fa-map-marker-alt"></i> 10 Northumberland St, London WC2N 5DB, United Kingdom
+              </p>
+              <agm-map [latitude]=51.507406 [longitude]=-0.125283></agm-map>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselMaps" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselMaps" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
       </div>
-      <div class="col-7"></div>
-    </div>
+
+      <div class="mail-inf mt-5">
+        <p class="mdt">Email info</p>
+        <p class="smt">@AGURI&PIJ2022.com for appointment</p>
+      </div>
   </div>
 </div>
 
