--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -38,48 +38,54 @@
       <div class="col-4 contact-text">
         <span class="mdt">Let’s connect</span>
         <p class="smt">For questions regarding our products and services you can also contact us by filling out the form below.</p>
+        <div class="mail-inf mt-5 text-center">
+          <h5>Email info</h5>
+          <p class="smt">info@AGURI&PIJ2022.com for appointment</p>
+        </div>
       </div>
       <div class="col"></div>
     </div>
   </div>
 
-  <div class="aguri-info ">
-      <div class="showroom mb-4">
-        <p class="mdt">Showroom</p>
-        <div id="carouselMaps" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselMaps" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselMaps" data-slide-to="1"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <p class="text-center">
-                <i class="fas fa-map-marker-alt"></i> 6901 Hollywood Blvd, Los Angeles, CA 90028, United States
-              </p>
-              <agm-map [latitude]=34.102345 [longitude]=-118.340389></agm-map>
+  <div class="aguri-info">
+    <div class="showroom">
+      <h5 class="text-center mb-3">Our Showrooms</h5>
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+          <!--carousel-maps-->
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
             </div>
-            <div class="carousel-item">
-              <p class="text-center">
-                <i class="fas fa-map-marker-alt"></i> 10 Northumberland St, London WC2N 5DB, United Kingdom
-              </p>
-              <agm-map [latitude]=51.507406 [longitude]=-0.125283></agm-map>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <p class="text-center">
+                  <i class="fas fa-map-marker-alt"></i> 6901 Hollywood Blvd, Los Angeles, CA 90028, United States
+                </p>
+                <agm-map [latitude]=34.102345 [longitude]=-118.340389></agm-map>
+              </div>
+              <div class="carousel-item">
+                <p class="text-center">
+                  <i class="fas fa-map-marker-alt"></i> 10 Northumberland St, London WC2N 5DB, United Kingdom
+                </p>
+                <agm-map [latitude]=51.507406 [longitude]=-0.125283></agm-map>
+              </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
-          <a class="carousel-control-prev" href="#carouselMaps" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselMaps" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
         </div>
+        <div class="col-1"></div>
       </div>
-
-      <div class="mail-inf mt-5">
-        <p class="mdt">Email info</p>
-        <p class="smt">@AGURI&PIJ2022.com for appointment</p>
-      </div>
+    </div>
   </div>
 </div>
 
