--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -60,13 +60,13 @@
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
             </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
+              <div class="carousel-item active" data-bs-interval="3000">
                 <p class="text-center">
                   <i class="fas fa-map-marker-alt"></i> 6901 Hollywood Blvd, Los Angeles, CA 90028, United States
                 </p>
                 <agm-map [latitude]=34.102345 [longitude]=-118.340389></agm-map>
               </div>
-              <div class="carousel-item">
+              <div class="carousel-item" data-bs-interval="3000">
                 <p class="text-center">
                   <i class="fas fa-map-marker-alt"></i> 10 Northumberland St, London WC2N 5DB, United Kingdom
                 </p>
