--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -764,9 +764,9 @@
   <div class="row">
     <div class="col-4 ps-0">
         <h4 class="mb-3">Our Showroom</h4>
-        <p class=" mb-1">6901 Hollywood Blvd, LA, CA 90028, US</p>
-        <p class="">10 Northumberland St, London WC2N 5DB, UK</p>
-        <p class="smt mt-3">Email info @AGURI&PIJ2022.com for appointment</p>
+        <p class="smt mb-2">6901 Hollywood Blvd, LA, CA 90028, US</p>
+        <p class="smt">10 Northumberland St, London WC2N 5DB, UK</p>
+        <p class="decor-text mt-3">Email info @AGURI&PIJ2022.com for appointment</p>
       </div>
     <div class="col-2 showroom bottom-content">
       <div class="bottom-content-inner">
