--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -64,13 +64,13 @@
                 <p class="text-center">
                   <i class="fas fa-map-marker-alt"></i> 6901 Hollywood Blvd, Los Angeles, CA 90028, United States
                 </p>
-                <agm-map [latitude]=34.102345 [longitude]=-118.340389 [zoom]="10"></agm-map>
+                <agm-map [latitude]=34.102345 [longitude]=-118.340389 [zoom]=10></agm-map>
               </div>
               <div class="carousel-item" data-bs-interval="3000">
                 <p class="text-center">
                   <i class="fas fa-map-marker-alt"></i> 10 Northumberland St, London WC2N 5DB, United Kingdom
                 </p>
-                <agm-map [latitude]=51.507406 [longitude]=-0.125283 [zoom]="10"></agm-map>
+                <agm-map [latitude]=51.507406 [longitude]=-0.125283 [zoom]=10></agm-map>
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
