--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -11,13 +11,13 @@
   <!--category-top-->
   <div class="category-top row pb-5">
     <div class="col-3">
-      <img src="./assets/img/category-deco/{{cid}}.png" />
+      <img src="./assets/img/cate-deco/{{cid}}.png" />
     </div>
     <div class="col-3">
       <div class="sub-cate-box">
         <div class="sub-cate-img">
           <a routerLink="#">
-            <img src="./assets/img/category-deco/{{cid}}.1.png" />
+            <img src="./assets/img/cate-deco/{{cid}}.1.png" />
           </a>
         </div>
         <div class="sub-name">
@@ -29,7 +29,7 @@
       <div class="sub-cate-box">
         <div class="sub-cate-img">
           <a routerLink="/sub-category/2">
-            <img src="./assets/img/category-deco/{{cid}}.2.png" />
+            <img src="./assets/img/cate-deco/{{cid}}.2.png" />
           </a>
         </div>
         <div class="sub-name">
@@ -41,7 +41,7 @@
       <div class="sub-cate-box">
         <div class="sub-cate-img">
           <a routerLink="#">
-            <img src="./assets/img/category-deco/{{cid}}.3.png" />
+            <img src="./assets/img/cate-deco/{{cid}}.3.png" />
           </a>
         </div>
         <div class="sub-name">
