--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -24,7 +24,7 @@
 
         <p class="mdt">{{item.collection}}</p>
         <h5>{{item.name}}</h5>
-        <h5 class="my-2">${{item.price}}</h5>
+        <h5 class="my-2">{{ item.price | currency: 'USD'}}</h5>
         <p class="mdt">Complimentary Shipping & Returns</p>
         <div class="line mb-3"></div>
 
