--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -1,13 +1,4 @@
 <div class="container">
-  <!--breadcrumb-->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb" *ngFor="let item of data | slice: 0: 1">
-      <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
-      <li class="breadcrumb-item"><a routerLink="/shop-all">Shop All</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a>{{item.cate_name}}</a></li>
-    </ol>
-  </nav>
-
   <!--category-top-->
   <div class="category-top row pb-5">
     <div class="col-3">
@@ -106,6 +97,15 @@
 
     <!--category-main-->
     <div class="category-main px-0 col-10">
+      <!--breadcrumb-->
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb" *ngFor="let item of data | slice: 0: 1">
+          <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+          <li class="breadcrumb-item"><a routerLink="/shop-all">Shop All</a></li>
+          <li class="breadcrumb-item active" aria-current="page"><a>{{item.cate_name}}</a></li>
+        </ol>
+      </nav>
+
       <div class="row cate-product">
         <div class="col-3 card mb-9" *ngFor="let item of data | slice: 0: 4">
           <div class="item-card-info">
@@ -134,23 +134,23 @@
                           </div>
                           <div class="carousel-inner">
                             <div class="carousel-item active">
-                              <img src="./assets/img/product-detail/quickview1.png">
+                              <img src="{{item.url}}">
                             </div>
                             <div class="carousel-item">
-                              <img src="./assets/img/product-detail/quickview2.png">
+                              <img src="{{item.url}}">
                             </div>
                             <div class="carousel-item">
-                              <img src="./assets/img/product-detail/quickview3.png">
+                              <img src="{{item.url}}">
                             </div>
                             <div class="carousel-item">
-                              <img src="./assets/img/product-detail/quickview4.png">
+                              <img src="{{item.url}}">
                             </div>
                           </div>
                         </div>
                       </div>
                       <div class="col-5 pe-0">
-                        <h5>Diamond Wire Ring</h5>
-                        <h5 class="my-3">$7,000</h5>
+                        <h5>{{item.name}}</h5>
+                        <h5 class="my-3">${{item.price}}</h5>
                         <p>Quantity</p>
                         <div class="quick-size my-3">
                           <select class="form-select smt">
@@ -175,7 +175,8 @@
             </div>
             <div class="item-inf text-center mt-2">
               <p class="decor-text mb-1">{{item.name}}</p>
-              <p class="smt item-price">${{item.price}}</p>
+              <p class="smt item-price">{{ item.price | currency: 'USD'}}
+              </p>
             </div>
           </div>
         </div>
@@ -185,8 +186,8 @@
       <div class="mb-3 row">
         <div class="col-6 mb-9">
           <div class="featured">
-            <div class="featured-img">
-              <a routerLink="#">
+            <div class="featured-img" *ngFor="let item of data | slice: 0: 1">
+              <a routerLink="/product-detail/{{item.pid}}">
                 <img src="./assets/img/featured/{{cid}}.png">
               </a>
             </div>
@@ -209,7 +210,7 @@
             </div>
             <div class="item-inf text-center mt-2">
               <p class="decor-text mb-1">{{item.name}}</p>
-              <p class="smt mb-0">${{item.price}}</p>
+              <p class="smt mb-0">{{ item.price | currency: 'USD'}}</p>
             </div>
           </div>
         </div>
@@ -230,7 +231,7 @@
             </div>
             <div class="item-inf text-center mt-2">
               <p class="decor-text mb-1">{{item.name}}</p>
-              <p class="smt item-price">${{item.price}}</p>
+              <p class="smt item-price">{{ item.price | currency: 'USD'}}</p>
             </div>
           </div>
         </div>
