--- a/src/app/pages/sub-category/sub-category.component.html
+++ b/src/app/pages/sub-category/sub-category.component.html
@@ -1,15 +1,3 @@
-<div class="container">
-  <!--breadcrumb-->
-  <nav aria-label="breadcrumb">
-    <ol class="breadcrumb" *ngFor="let item of data | slice: 0: 1">
-      <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
-      <li class="breadcrumb-item"><a routerLink="/shop-all">Shop All</a></li>
-      <li class="breadcrumb-item active"><a routerLink="/category/{{item.cid}}">{{item.cate_name}}</a></li>
-      <li class="breadcrumb-item active" aria-current="page"><a>{{item.sub_name}}</a></li>
-    </ol>
-  </nav>
-</div>
-
 <!--category-top-->
 <div class="category-top row pb-5">
   <div class="col-12">
@@ -20,14 +8,14 @@
         <button type="button" data-bs-target="#carouselTopBars" data-bs-slide-to="2" aria-label="Slide 3"></button>
       </div>
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="./assets/img/subcate-deco/{{sid}}.1.png" class="d-block w-100" alt="...">
+        <div class="carousel-item active" data-bs-interval="3000">
+          <img src="./assets/img/subcate-deco/{{sid}}.1.png" class="d-block w-100">
         </div>
-        <div class="carousel-item">
-          <img src="./assets/img/subcate-deco/{{sid}}.2.png" class="d-block w-100" alt="...">
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./assets/img/subcate-deco/{{sid}}.2.png" class="d-block w-100">
         </div>
-        <div class="carousel-item">
-          <img src="./assets/img/subcate-deco/{{sid}}.3.png" class="d-block w-100" alt="...">
+        <div class="carousel-item" data-bs-interval="3000">
+          <img src="./assets/img/subcate-deco/{{sid}}.3.png" class="d-block w-100">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -98,6 +86,16 @@
 
     <!--category-main-->
     <div class="category-main px-0 col-10">
+      <!--breadcrumb-->
+      <nav aria-label="breadcrumb">
+        <ol class="breadcrumb" *ngFor="let item of data | slice: 0: 1">
+          <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
+          <li class="breadcrumb-item"><a routerLink="/shop-all">Shop All</a></li>
+          <li class="breadcrumb-item active"><a routerLink="/category/{{item.cid}}">{{item.cate_name}}</a></li>
+          <li class="breadcrumb-item active" aria-current="page"><a>{{item.sub_name}}</a></li>
+        </ol>
+      </nav>
+
       <div class="row cate-product">
         <div class="col-3 card mb-9" *ngFor="let item of data | slice: 0: 4">
           <div class="item-card-info">
@@ -167,7 +165,7 @@
             </div>
             <div class="item-inf text-center mt-2">
               <p class="decor-text mb-1">{{item.name}}</p>
-              <p class="smt item-price">${{item.price}}</p>
+              <p class="smt item-price">{{ item.price | currency: 'USD'}}</p>
             </div>
           </div>
         </div>
@@ -201,7 +199,7 @@
             </div>
             <div class="item-inf text-center mt-2">
               <p class="decor-text mb-1">{{item.name}}</p>
-              <p class="smt mb-0">${{item.price}}</p>
+              <p class="smt mb-0">{{ item.price | currency: 'USD'}}}</p>
             </div>
           </div>
         </div>
@@ -222,7 +220,7 @@
             </div>
             <div class="item-inf text-center mt-2">
               <p class="decor-text mb-1">{{item.name}}</p>
-              <p class="smt item-price">${{item.price}}</p>
+              <p class="smt item-price">{{ item.price | currency: 'USD'}}</p>
             </div>
           </div>
         </div>
