--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -99,7 +99,7 @@
     <div class="category-main px-0 col-10">
       <!--breadcrumb-->
       <nav aria-label="breadcrumb">
-        <ol class="breadcrumb" *ngFor="let item of data | slice: 0: 1">
+        <ol class="breadcrumb" *ngFor="let item of category | slice: 0: 1">
           <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
           <li class="breadcrumb-item"><a routerLink="/shop-all">Shop All</a></li>
           <li class="breadcrumb-item active" aria-current="page"><a>{{item.cate_name}}</a></li>
@@ -107,7 +107,7 @@
       </nav>
 
       <div class="row cate-product">
-        <div class="col-3 card mb-9" *ngFor="let item of data | slice: 0: 4">
+        <div class="col-3 card mb-9" *ngFor="let item of category | slice: 0: 4">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -186,7 +186,7 @@
       <div class="mb-3 row">
         <div class="col-6 mb-9">
           <div class="featured">
-            <div class="featured-img" *ngFor="let item of data | slice: 0: 1">
+            <div class="featured-img" *ngFor="let item of category | slice: 0: 1">
               <a routerLink="/product-detail/{{item.pid}}">
                 <img src="./assets/img/featured/{{cid}}.png">
               </a>
@@ -196,7 +196,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3 mb-9" *ngFor="let item of data | slice: 4: 6">
+        <div class="col-3 mb-9" *ngFor="let item of category | slice: 4: 6">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -217,7 +217,7 @@
       </div>
 
       <div class="row cate-product ">
-        <div class="col-3 mb-9" *ngFor="let item of data | slice: 6">
+        <div class="col-3 mb-9" *ngFor="let item of category | slice: 6">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
