--- a/src/app/pages/sub-category/sub-category.component.html
+++ b/src/app/pages/sub-category/sub-category.component.html
@@ -28,6 +28,16 @@
       </button>
     </div>
   </div>
+
+  <div class="category-top-text row">
+    <div class="col-1"></div>
+    <div class="col-6" *ngFor="let item of subCate | slice: 0: 1">
+      <h4>{{item.sub_name}} {{item.cate_name}}</h4>
+      <p>Meticulously crafted with Aguri’s renowned jewellery, these are {{item.cate_name}} to wear—and love—for
+        {{item.sub_name}}. Wear one on its own or stacked with an Aguri's {{item.sub_name}}</p>
+    </div>
+    <div class="col-5"></div>
+  </div>
 </div>
 
 <div class="container">
@@ -88,7 +98,7 @@
     <div class="category-main px-0 col-10">
       <!--breadcrumb-->
       <nav aria-label="breadcrumb">
-        <ol class="breadcrumb" *ngFor="let item of data | slice: 0: 1">
+        <ol class="breadcrumb" *ngFor="let item of subCate | slice: 0: 1">
           <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
           <li class="breadcrumb-item"><a routerLink="/shop-all">Shop All</a></li>
           <li class="breadcrumb-item active"><a routerLink="/category/{{item.cid}}">{{item.cate_name}}</a></li>
@@ -97,7 +107,7 @@
       </nav>
 
       <div class="row cate-product">
-        <div class="col-3 card mb-9" *ngFor="let item of data | slice: 0: 4">
+        <div class="col-3 card mb-9" *ngFor="let item of subCate | slice: 0: 4">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -175,7 +185,7 @@
       <div class="mb-3 row">
         <div class="col-6 mb-9">
           <div class="featured">
-            <div class="featured-img" *ngFor="let item of data | slice: 0: 1">
+            <div class="featured-img" *ngFor="let item of subCate | slice: 0: 1">
               <a routerLink="#">
                 <img src="./assets/img/featured/{{item.cid}}.png">
               </a>
@@ -185,7 +195,7 @@
             </div>
           </div>
         </div>
-        <div class="col-3 mb-9" *ngFor="let item of data | slice: 4: 6">
+        <div class="col-3 mb-9" *ngFor="let item of subCate | slice: 4: 6">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
@@ -199,14 +209,14 @@
             </div>
             <div class="item-inf text-center mt-2">
               <p class="decor-text mb-1">{{item.name}}</p>
-              <p class="smt mb-0">{{ item.price | currency: 'USD'}}}</p>
+              <p class="smt mb-0">{{ item.price | currency: 'USD'}}</p>
             </div>
           </div>
         </div>
       </div>
 
       <div class="row cate-product ">
-        <div class="col-3 mb-9" *ngFor="let item of data | slice: 6">
+        <div class="col-3 mb-9" *ngFor="let item of subCate | slice: 6">
           <div class="item-card-info">
             <div class="card-prd">
               <div class="img">
