--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -85,7 +85,7 @@
 
 /*experiences*/
 .experiences{
-  background-color: #fff;
+  background-color: #E2CDB0;
   padding-top:80px;
   padding-bottom:80px;
 }
