--- a/src/app/pages/guide/guide.component.css
+++ b/src/app/pages/guide/guide.component.css
@@ -1,6 +1,6 @@
 /*insurance*/
 .insurance{
-  background-color: #e7e7e7;
+  background-color: #E8CEAB;
   padding-top:60px;
   padding-bottom:60px;
   margin-top:120px;
