--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -239,7 +239,7 @@
         <h5>Similar Products</h5>
         <p class="smt">AGURI designs reinvent our iconic AGURI collection with bold profiles and powerful details.</p>
       </div>
-      <div class="col-3" *ngFor="let item of product | slice: 0: 3">
+      <div class="col-3" *ngFor="let item of similar | slice: 0: 3">
         <div class="card-prd">
           <div class="img">
             <a routerLink="/product-detail/{{item.pid}}">
