--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -262,7 +262,7 @@
         <div class="row">
           <div class="col-6 simi-left">
             <div class="itm">
-              <a href="#">
+              <a routerLink="/product-detail/{{pid}}">
                 <img src="./assets/img/product-detail/compare1.png">
               </a>
               <div class="item-inf text-center">
