--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -168,35 +168,11 @@
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="4000">
               <div class="row">
-                <div class="col-4">
+                <div class="col-4" *ngFor="let item of newArrival | slice: 0:3">
                   <div class="card-prd">
                     <div class="img">
-                      <a href="#">
-                        <img src="./assets/img/home/new1.png">
-                      </a>
-                    </div>
-                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                      Compare
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a href="#">
-                        <img src="./assets/img/home/new2.png">
-                      </a>
-                    </div>
-                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                      Compare
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a href="#">
-                        <img src="./assets/img/home/new3.png">
+                      <a routerLink="/product-detail/{{item.pid}}">
+                        <img src="{{item.thumb}}">
                       </a>
                     </div>
                     <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
@@ -208,35 +184,11 @@
             </div>
             <div class="carousel-item" data-bs-interval="4000">
               <div class="row">
-                <div class="col-4">
+                <div class="col-4" *ngFor="let item of newArrival | slice: 3:6">
                   <div class="card-prd">
                     <div class="img">
-                      <a href="#">
-                        <img src="./assets/img/home/new4.png">
-                      </a>
-                    </div>
-                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                      Compare
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a href="#">
-                        <img src="./assets/img/home/new5.png">
-                      </a>
-                    </div>
-                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                      Compare
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a href="#">
-                        <img src="./assets/img/home/new6.png">
+                      <a routerLink="/product-detail/{{item.pid}}">
+                        <img src="{{item.thumb}}">
                       </a>
                     </div>
                     <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
@@ -319,12 +271,12 @@
         </div>
         <div class="item-box-all">
           <div class="item-box-img">
-            <a routerLink="#">
+            <a routerLink="/category/4">
               <img src="./assets/img/home/all-j1.png"/>
             </a>
           </div>
           <div class="item-box-content text-center">
-            <a routerLink="#">
+            <a routerLink="/category/4">
               <h5>Necklaces</h5>
             </a>
           </div>
@@ -333,12 +285,12 @@
       <div class="col-8">
         <div class="item-box-all">
           <div class="item-box-img">
-            <a routerLink="#">
+            <a routerLink="/category/3">
               <img src="./assets/img/home/all-j2.png"/>
             </a>
           </div>
           <div class="item-box-content text-center">
-            <a routerLink="#">
+            <a routerLink="/category/3">
               <h5>Bracelets</h5>
             </a>
           </div>
@@ -354,12 +306,12 @@
       <div class="col-4">
         <div class="item-box-all">
           <div class="item-box-img">
-            <a routerLink="#">
+            <a routerLink="/category/1">
               <img src="./assets/img/home/all-j3.png"/>
             </a>
           </div>
           <div class="item-box-content text-center">
-            <a routerLink="#">
+            <a routerLink="/category/1">
               <h5>Rings</h5>
             </a>
           </div>
@@ -368,12 +320,12 @@
       <div class="col-4">
         <div class="item-box-all">
           <div class="item-box-img">
-            <a routerLink="#">
+            <a routerLink="/category/2">
               <img src="./assets/img/home/all-j4.png"/>
             </a>
           </div>
           <div class="item-box-content text-center">
-            <a routerLink="#">
+            <a routerLink="/category/2">
               <h5>Earrings</h5>
             </a>
           </div>
@@ -382,6 +334,7 @@
     </div>
   </div>
 </div>
+
 <!--BEST SELLERS-->
 <div class="also-like best-seller mbt-120">
   <h5 class="text-center mb-4">Best Sellers</h5>
