--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -3,6 +3,9 @@
 .new-arrivals{
   padding-top:100px;
 }
+.new-arr{
+  background: #fff;
+}
 /*Showcase*/
 .showcase-title-inner{
   position: relative;
