--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -1,4 +1,5 @@
 <!--Product detail-->
+<link rel="stylesheet" href="product-detail.component.css">
 <div class="container">
   <!--DETAIL-->
   <div class="prod-detail">
