--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,10 +26,46 @@
               <li class="px-3 py-1"><i class="fa fa-shopping-cart fa-lg" data-bs-toggle="offcanvas" data-bs-target="#addbag"></i></li>
               <!--OFFCANVSS ADD BAG-->
               <div class="offcanvas offcanvas-end" id="addbag">
+                <div class="offcanvas-header">
+                  <h5 class="offcanvas-title mt-3">Shopping Bag</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
                 <div class="offcanvas-body">
-                  <h6 class="offcanvas-title mt-3">YOUR CART IS CURRENTLY EMPTY.</h6>
-                  <p>Continue shopping  <a routerlink="#">Here</a></p>
-                  <button class="btn btn-pri btnlg mt-3" type="button" routerLink="/order-detail">View Cart</button>
+                  <div class="row product-add1 mb-3">
+                    <div class="col-4 ps-0">
+                      <a href="#">
+                        <img src="assets/img/product-detail/add-product1.png">
+                      </a>
+                    </div>
+                    <div class="col-6">
+                      <p>Amel Earring</p>
+                    </div>
+                    <div class="col-2 pe-0">
+                      <i class="fa-solid fa-xmark"></i>
+                      <p>$5,000</p>
+                    </div>
+                  </div>
+                  <div class="line mb-3"></div>
+                  <div class="row product-add2 mb-3">
+                    <div class="col-4 ps-0">
+                      <a href="#">
+                        <img src="assets/img/product-detail/add-product2.png">
+                      </a>
+                    </div>
+                    <div class="col-6">
+                      <p>Diamons And Gold Spark Ring</p>
+                    </div>
+                    <div class="col-2 pe-0">
+                      <i class="fa-solid fa-xmark"></i>
+                      <p>$6,700</p>
+                    </div>
+                  </div>
+                  <div class="line mb-3"></div>
+                  <div class="d-flex mb-3">
+                    <p class="mdt me-auto">Product Total</p>
+                    <p class="mdt">$11,700</p>
+                  </div>
+                  <button class="btn btn-pri btnlg mt-3" type="button" routerLink="/order-detail">Continue</button>
                 </div>
               </div>
             </div>
