--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -177,7 +177,7 @@
                 <p class="mdt me-auto">Product Total</p>
                 <p class="mdt">$11,700</p>
               </div>
-              <button class="btn btn-pri btnlg mt-3" type="button" routerLink="/order-detail">Continue</button>
+              <button class="btn btn-pri btnlg mt-3 w-100" type="button" routerLink="/order-detail">Continue</button>
             </div>
           </div>
         </div>
@@ -478,7 +478,7 @@
     <div class="col-6"></div>
     <div class="col-3">
       <button class="advisor btn btnlg btn-pri w-100" data-bs-toggle="modal" type="button" data-bs-target="#review">Write a review</button>
-      <!-- Modal -->
+      <!-- Modal review-->
       <div class="modal fade" id="review">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
