--- a/src/app/pages/order-detail/order-detail.component.html
+++ b/src/app/pages/order-detail/order-detail.component.html
@@ -87,7 +87,7 @@
         <input type="checkbox" class="check-box" id="collection-1" name="collection-1" value="Sping Collection">
         <label class="smt" for="collection-1">I accept the terms and conditions, privacy policy and legal notice</label><br>
       </div>
-      <button class="btn btn-pri btnlg" type="button" routerLink="/check-out">Check out</button>
+      <button class="btn btn-pri btnlg w-100" type="button" routerLink="/check-out">Check out</button>
       <p class="mt-3 smt">Do you have a coupon? Add it at checkout.</p>
     </div>
   </div>
