--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -52,38 +52,16 @@
 </div>
 
 <!--Map here-->
-<div class="aguri-info">
-  <div >
+<div class="aguri-info container">
+  <div>
     <h5 class="text-center mb-3">Our Showrooms</h5>
   </div>
-  <!--carousel-maps-->
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <agm-map [latitude]=34.102345 [longitude]=-118.340389 [zoom]=10></agm-map>
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="3000">
-        <p class="text-center">
-          <i class="fas fa-map-marker-alt"></i> 6901 Hollywood Blvd, Los Angeles, CA 90028, United States
-        </p>
-        <agm-map [latitude]=34.102345 [longitude]=-118.340389 [zoom]=10></agm-map>
-      </div>
-      <div class="carousel-item" data-bs-interval="3000">
-        <p class="text-center">
-          <i class="fas fa-map-marker-alt"></i> 10 Northumberland St, London WC2N 5DB, United Kingdom
-        </p>
-        <agm-map [latitude]=51.507406 [longitude]=-0.125283 [zoom]=10></agm-map>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+    <div class="col-1"></div>
   </div>
 </div>
 
