--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -720,7 +720,7 @@
     <div class="col-4 ps-0">
         <h4 class="mb-3">Our Showrooms</h4>
         <p class="smt mb-1"><i class="fas fa-map-marker-alt"></i> 6901 Hollywood Blvd, LA, CA 90028, US</p>
-        <p class="smt"><i class="fas fa-map-marker-alt"></i> 10 NorthumbeCartrland St, London WC2N5DB, UK</p>
+<!--        <p class="smt"><i class="fas fa-map-marker-alt"></i> 10 NorthumbeCartrland St, London WC2N5DB, UK</p>-->
         <p class="smt mt-3">Email info@AGURI&PIJ2022.com for appointment</p>
       </div>
     <div class="col-2 showroom bottom-content">
