--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="headnav">
+<div [class]="'headnav '+(show?'nav--hidden':'')">
   <!--HEADER-->
   <header class="section top-page">
     <div class="header card-header border-0 container">
