--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -12,7 +12,7 @@
           </a>
         </div>
         <div class="sub-name">
-          <h6>{{item.sub_name}}</h6>
+          <p class="mdt mb-0">{{item.sub_name}}</p>
         </div>
       </div>
     </div>
