--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -56,13 +56,9 @@
   <div>
     <h5 class="text-center mb-3">Our Showrooms</h5>
   </div>
-  <div class="row">
-    <div class="col-1"></div>
-    <div class="col-10">
+    <div>
       <agm-map [latitude]=34.102345 [longitude]=-118.340389 [zoom]=10></agm-map>
     </div>
-    <div class="col-1"></div>
-  </div>
 </div>
 
 
