--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
                     <p class="mdt me-auto">Product Total</p>
                     <p class="mdt">$11,700</p>
                   </div>
-                  <button class="btn btn-pri btnlg mt-3" type="button" routerLink="/order-detail">Continue</button>
+                  <button class="btn btn-pri btnlg mt-3 w-100" type="button" routerLink="/order-detail">Continue</button>
                 </div>
               </div>
             </div>
@@ -149,26 +149,26 @@
       <div class="col-2">
         <ul>
           <li><p class="mdt">Explore</p></li>
-          <li>Home</li>
-          <li>About us</li>
-          <li>Jewellery guide</li>
+          <li class="mb-1">Home</li>
+          <li class="mb-1">About us</li>
+          <li class="mb-1">Jewellery guide</li>
         </ul>
       </div>
       <div class="col-2">
         <ul>
           <li><p class="mdt">Jewellery</p></li>
-          <li>Rings</li>
-          <li>Earrings</li>
-          <li>Bracelets</li>
-          <li>Necklaces</li>
+          <li class="mb-2">Rings</li>
+          <li class="mb-2">Earrings</li>
+          <li class="mb-2">Bracelets</li>
+          <li class="mb-2">Necklaces</li>
         </ul>
       </div>
       <div class="col-2">
         <ul>
           <li><p class="mdt">More</p></li>
-          <li>Size guide</li>
-          <li>Shipping & Returns</li>
-          <li>Product care & Repair</li>
+          <li class="mb-2">Size guide</li>
+          <li class="mb-2">Shipping & Returns</li>
+          <li class="mb-2">Product care & Repair</li>
         </ul>
       </div>
       <div class="col-2">
