--- a/src/app/pages/order-detail/order-detail.component.html
+++ b/src/app/pages/order-detail/order-detail.component.html
@@ -84,8 +84,8 @@
       </div>
       <p class="smt">Receive it in Vietnam in 4 - 6 business day/s with Express Shipping.</p>
       <div class="my-3">
-        <input type="checkbox" class="check-box" id="collection-1" name="collection-1" value="Sping Collection">
-        <label class="smt" for="collection-1">I accept the terms and conditions, privacy policy and legal notice</label><br>
+        <input type="checkbox" class="check-box check-cate" id="collection-1" name="collection-1" value="Sping Collection">
+        <label class="smt" for="collection-1">I accept the terms and conditions, privacy policy.</label><br>
       </div>
       <button class="btn btn-pri btnlg w-100" type="button" routerLink="/check-out">Check out</button>
       <p class="mt-3 smt">Do you have a coupon? Add it at checkout.</p>
